cmake_minimum_required(VERSION 3.5)

include_directories(../muduo)

add_subdirectory(finger)
add_subdirectory(sudoku)
add_subdirectory(simple)
add_subdirectory(filetransfer)
add_subdirectory(asio)
add_subdirectory(protobuf)
add_subdirectory(timer)
add_subdirectory(timingwheel)
add_subdirectory(multiplexer)
add_subdirectory(socks4a)
add_subdirectory(shorturl)
